--- a/src/scss/layouts/_pag09.scss
+++ b/src/scss/layouts/_pag09.scss
@@ -1,136 +1,122 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-#cont-pag09{
-    @include m.grid(2, 4rem);
-    padding: 6rem 4rem 6rem 20rem;
-    background: v.$azul2;
-    position: relative;
+#cont-pag10{
 
-    &::after{
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 30%;
-        bottom: 0;
-        left: 0;
-        background: v.$azul1;
-        z-index: 0;
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    background: v.$gris1;
 
-    @include m.escritorioHD{
-        padding: 6rem;
-        @include m.grid(2, 2rem);
-    }
+    #cont-mensaje10{
 
-    @include m.escritorio{
-        @include m.grid(1, 2rem);
-    }
-
-    @include m.tablet{
-        padding: 2rem 3rem;
-    }
-
-    .hojas09{
-        padding: 2rem 3rem;
-        width: 100%;
-        background: v.$blanco;
-        border-radius: 2rem;
-        box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.75);
-        z-index: 1;
-
-        @include m.tablet{
-            padding: 4rem 3rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 4rem 4rem 0 4rem;
+        background: v.$amarilloPastel;
+        overflow: hidden;
+        position: relative;
+        flex-wrap: wrap;
+        
+        @include m.escritorio{
+            padding: 4rem 0 0 0;
+            justify-content: center;
+        }
+        
+        &::after{
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            clip-path: polygon(40% 0, 80% 0, 60% 100%, 20% 100%);
+            background: v.$verde;
+            z-index: 0;
+        }
+        
+        &::before{
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            clip-path: polygon(70% 0, 100% 0, 100% 100%, 50% 100%);
+            background: v.$verdeFuerte;
+            z-index: 0;
         }
 
-        @include m.telefono{
-            padding: 2rem;
+        .cont-imagen{
+            width: 30%;
+            height: 30rem;
+            z-index: 1;
+
+            @include m.escritorio{
+                width: 70%;
+            }
+
+            @include m.tablet{
+                width: 100%;
+                align-self: center;
+                padding: 0 4rem;
+            }
+            
         }
+    
+        #mensaje{
+            z-index: 1;
+            width: 70%;
 
-        &#hoja09_1{
-            .puntos09{
-                background: v.$crema2;
-            }
-        }
-
-        &#hoja09_2{
-            .puntos09{
-                background: v.$naranjaClaro;
-            }
-        }
-
-        h4{
-            text-align: center;
-            padding: 2rem 3rem;
-            color: v.$blanco;
-            background: v.$naranja;
-            border-radius: 2rem;
-            margin-bottom: 2rem;
-            box-shadow: 0px 2px 17px -5px rgba(0,0,0,0.68);
-        }
-
-        .puntos09{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 2rem;
-            padding: 2rem;
-            border-radius: 2rem;
-            box-shadow: 0px 2px 17px -5px rgba(0,0,0,0.68);
-
-            @include m.telefono{
-                padding: 2rem 1rem; 
+            
+            
+            @include m.escritorio{
+                width: 100%;
+                background: v.$colorFuente;
             }
 
-            .cont-ul{
-                width: 80%;
-
-                @include m.telefono{
-                    width: 70%;
-                }
-                
-                h5{
-                    margin-bottom: 2rem;
-                    color: v.$naranja;
-                }
-
-                ul{
-                    font-size: 1.2rem;
-
-                    li{
-                        margin-left: 4rem;
-                        line-height: 1.6;
-                    }
-                }
-            }
-
-            p{
-                width: 80%;
-                line-height: 1.6;
-                font-size: 1.2rem;
-
-                @include m.telefono{
-                    width: 70%;
-                }
-            }
-
-            figure{
-                width: 6rem;
-                height: 5rem;
+            #globo{
+                @include m.globoNegro(izquierda);
             }
         }
     }
 
-    #persona{
-        position: absolute;
-        width: 25rem;
-        height: 35rem;
-        bottom: 0;
-        left: 0;
-        z-index: 2;
+    #cont-descarga{
+        margin-top: 4rem;
+        width: 50%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        background: v.$gris1;
+        padding: 4rem;
 
         @include m.escritorioHD{
-            display: none;
+            width: 100%;
+        }
+
+        a{
+            display: block;
+            transition: all .3s ease;
+            opacity: .8;
+
+            figure{
+                height: 8rem;
+            }
+
+            @include m.telefono{
+                margin-top: 2rem;
+            }
+
+            &:hover{
+                opacity: 1;
+                padding: 1rem;
+                transform: scale(.9);
+                box-shadow: 1px 2px 11px -4px rgba(0,0,0,0.75);
+            }
         }
     }
+    
 }
