--- a/src/scss/layouts/_pag10.scss
+++ b/src/scss/layouts/_pag10.scss
@@ -1,122 +1,132 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-#cont-pag10{
+#cont-intro11{
 
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    background: v.$azul1;
+
+    .instrucciones-mano{
+        border-radius: 0;
+        width: 50%;
+
+        @include m.tablet{
+            width: 100%;
+        }
+    }
+}
+
+#cont-tarjetas-flip{
+    display: flex;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    background: v.$gris1;
+    padding: 4rem 0;
 
-    #cont-mensaje10{
-
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 4rem 4rem 0 4rem;
-        background: v.$amarilloPastel;
-        overflow: hidden;
-        position: relative;
-        flex-wrap: wrap;
-        
-        @include m.escritorio{
-            padding: 4rem 0 0 0;
-            justify-content: center;
-        }
-        
-        &::after{
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            clip-path: polygon(40% 0, 80% 0, 60% 100%, 20% 100%);
-            background: v.$verde;
-            z-index: 0;
-        }
-        
-        &::before{
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            clip-path: polygon(70% 0, 100% 0, 100% 100%, 50% 100%);
-            background: v.$verdeFuerte;
-            z-index: 0;
-        }
-
-        .cont-imagen{
-            width: 30%;
-            height: 30rem;
-            z-index: 1;
-
-            @include m.escritorio{
-                width: 70%;
-            }
-
-            @include m.tablet{
-                width: 100%;
-                align-self: center;
-                padding: 0 4rem;
-            }
-            
-        }
-    
-        #mensaje{
-            z-index: 1;
-            width: 70%;
-
-            
-            
-            @include m.escritorio{
-                width: 100%;
-                background: v.$colorFuente;
-            }
-
-            #globo{
-                @include m.globoNegro(izquierda);
-            }
-        }
+    @include m.tablet{
+        justify-content: center;
     }
 
-    #cont-descarga{
-        margin-top: 4rem;
-        width: 50%;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        flex-wrap: wrap;
-        background: v.$gris1;
-        padding: 4rem;
+    .cards{
+        width: 30%;
+        height: 55rem;
+        position: relative;
+        cursor: pointer;
 
         @include m.escritorioHD{
-            width: 100%;
+            height: 60rem
         }
 
-        a{
-            display: block;
-            transition: all .3s ease;
-            opacity: .8;
+        @include m.escritorio{
+            width: 48%;
+            height: 40rem;
+            margin-bottom: 3.2rem;
+        }
 
-            figure{
-                height: 8rem;
+        @include m.tablet{
+            width: 65%;
+        }
+
+        @include m.telefono{
+            width: 95%;
+        }
+
+        &#flip1{
+            @include m.flip-cards(v.$azul1, fuerte);
+        }
+        
+        &#flip2{
+            @include m.flip-cards(v.$verde, fuerte);
+        }
+        
+        &#flip3{
+            @include m.flip-cards(v.$dorado, claro);
+        }
+
+        .cont-titulo{
+            padding: 2rem 3rem;
+            height: 8rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            h3{
+                color: v.$blanco;
+                text-align: center;
+            }
+        }
+
+        
+        .caras{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            backface-visibility: hidden;
+            transition: all 1s ease;            
+        }
+        
+        .front{
+            transform: perspective(50rem) rotateY(0deg);
+
+            .cont-imagen{
+                width: 60%;
+                height: 20rem;
+                margin: 0 auto;
+
+                @include m.escritorio{
+                    height: 12rem;
+                }
             }
 
-            @include m.telefono{
-                margin-top: 2rem;
+            .cont-mensaje-front{
+                padding: 2rem;
+                text-align: center;
+                font-weight: 700;
             }
+        }
 
-            &:hover{
-                opacity: 1;
-                padding: 1rem;
-                transform: scale(.9);
-                box-shadow: 1px 2px 11px -4px rgba(0,0,0,0.75);
+        .back{
+
+            transform: perspective(50rem) rotateY(180deg);
+
+            .cont-mensaje-back{
+                padding: 2rem;
+                text-align: center;
+                line-height: 1.6;
+            }
+        }
+
+        &.click{
+            .front{
+                transform: perspective(50rem) rotateY(180deg);
+            }
+        
+            .back{
+                transform: perspective(50rem) rotateY(360deg);
             }
         }
     }
-    
 }
