--- a/src/scss/layouts/_pag14.scss
+++ b/src/scss/layouts/_pag14.scss
@@ -1,410 +1,276 @@
-@use '../base/variables' as v;
 @use '../base/mixins' as m;
+@use '../base/variables' as v;
 
-#cont-info14{
 
-    @include m.grid(8, 3rem);
+// #instrucciones{
+//     position: relative;
+//     display: flex;
+//     background: v.$azulClaro2;
+//     overflow: visible;
+//     height: 30%;
+//     width: 50%;
 
-    @include m.escritorioHD{
-        @include m.grid(1, 3rem);
+//     @include m.tablet{
+//         width: 100%;
+//     }
+
+//     @include m.telefono{
+//         height: 15rem;
+//     }
+
+//     .mano{
+//         padding: 2rem;
+//         height: 10rem;
+//         width: 13rem;
+
+//         @include m.telefono{
+//             width: 20rem;
+//         }
+//     }
+
+//     p{
+//         padding: 2rem;
+//         text-align: center;
+//     }
+// }
+
+#cont-verde{
+    position: relative;
+    display: flex;
+    overflow: hidden;
+    background: v.$verde;
+    height: 20%;
+
+    @include m.telefono{
+        height: 40rem;
     }
 
-    #cont-caracteristicas{
-        grid-column: 1/4;
+    // .globos12{
+    //     display: none;
+    //     opacity: 0;
+    //     transition: all .3s ease;
+    // }
+
+    .personaje1{
+        position: relative;
+        height: 100%;
+        width: 100%;
+
+        @include m.escritorioHD{
+            width: 90%;
+        }
+
+        @include m.telefono{
+            height: 50%;
+            top: 20rem;
+        }
+    }
+
+    #globo1{
         display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-        background: v.$azul2;
+        @include m.globoNegro(izquierda);
+        width: 70%;
+        height: 50%;
+        top: 2rem;
 
         @include m.escritorioHD{
-            min-height: 25rem;
-            max-height: auto;
-            overflow: hidden;
-            align-items: flex-start;
-            grid-column: 1/2;
-        }
-
-        @include m.escritorio{
-            overflow: visible;
-        }
-
-        .cont-globo{
-
-            @include m.escritorioHD{
-                width: 60%;
-                height: 100%;
-                order: 2;
-                background: v.$colorFuente;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            @include m.escritorio{
-                width: 80%;
-                height: 80%;
-            }
-
-            @include m.tablet{
-                width: 100%;
-            }
-
-            .globo{
-                @include m.globoNegro(abajo);
-                border-radius: 0;
-
-                @include m.escritorioHD{
-
-                    &::after{
-                        clip-path: polygon(0% 0%, 0% 0%, 0% 0%);
-                    }
-                }
-
-                ul{
-                    text-align: left;
-                }
-            }
-        }
-
-        #cont-mano{
-
-            @include m.escritorioHD{
-                width: 20%;
-                height: 100%;
-                background: v.$azulClaro2;
-                order: 3;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            @include m.escritorio{
-                width: 100%;
-                height: 20%;
-            }
-
-            .instrucciones-mano{
-                border-radius: 0;
-
-                @include m.escritorioHD{
-                    flex-direction: column-reverse;
-
-                    .cont-imagen{
-                        width: 6rem;
-                        height: 6rem;
-                    }
-
-                    p{
-                        width: 90%;
-
-                        @include m.tablet{
-                            width: 60%;
-                        }
-                    }
-                }
-
-                @include m.escritorio{
-                    flex-direction: row;
-                    height: 100%;
-                }
-            }
-        }
-
-        #imgPersona{
-            @include m.escritorioHD{
-                width: 20%;
-                height: 100%;
-                order: 1;
-            }
-
-            @include m.escritorio{
-                height: 80%;
-            } 
-
-            @include m.tablet{
-                display: none;
-            }
-        }
-    }
-
-    #contenido-info{
-        padding: 15rem 3rem;
-        grid-column: 4/9;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        grid-template-areas: 
-        "pc1 pc2 pc3 pc4 pc5"                     
-        "info info info info info"
-        "info info info info info"
-        "pc6 pc7 pc8 pc9 pc10";
-        gap: 6rem;
-
-        @include m.escritorioHD{
-            grid-column: 1/2;
+            height: 70%;
         }
 
         @include m.tablet{
-            display: none;
-        }
-
-        #info-computadoras{
             width: 100%;
             height: 100%;
-            grid-area: info;
+            top: 2rem;
+        }
 
-            .cuadros-info{
-                display: none;
-                opacity: 0;
-                transition: all .6s ease;
+        @include m.telefono{
+            top: 0;
+        }
 
-                &.cuadro-activo{
-                    display: flex;
+        // &.cuadros_activos{
+        //     display: block;
+        //     opacity: 1;
+        // }
+
+    }
+}
+
+#columnas{
+    position: relative;
+    @include m.grid(2, 0);
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+
+    @include m.tablet{
+        @include m.grid(1, 0);
+    }
+
+    // .globos12{
+    //     display: none;
+    //     opacity: 0;
+    //     transition: all .3s ease;
+    // }
+
+    #cont-azul{
+        overflow: hidden;
+        position: relative;
+        display: flex;
+        width: 70%;
+        height: 60rem;
+        background: v.$azul2;
+
+        @include m.tablet{
+            height: 20rem;
+            width: 100%;
+        }
+
+        @include m.telefono{
+            height: 35rem;
+        }
+
+        .personaje2{
+            position: relative;
+            height: 70%;
+            top: 18rem;
+
+            @include m.tablet{
+                height: 90%;
+                width: 70%;
+                top: 2rem
+            }
+
+            @include m.telefono{
+                height: 50%;
+                top: 18rem;
+            }
+        }
+
+        #globo2{
+            @include m.globoNegro(izquierda);
+            width: 50%;
+            height: 60%;
+            display: flex;
+            padding: 2rem;
+            margin-top: 2rem;
+            margin-right: 2rem;
+
+            @include m.escritorioHD{
+                height: 70%;
+            }
+
+            @include m.tablet{
+                width: 100%;
+                height: 80%;
+                margin-top: 2rem;
+                margin-right: 0;
+            }
+            @include m.telefono{
+                height: 100%;
+                margin-top: 0;
+            }
+
+            // &.cuadros_activos{
+            //     display: block;
+            //     opacity: 1;
+            // }
+        }
+    }
+
+    #cont-gris{
+        overflow: hidden;
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 60rem;
+        background: v.$azulPastel;
+
+        @include m.telefono{
+            height: auto;
+        }
+
+        #cont-img{
+            height: 75%;
+
+            #globo3{
+                @include m.globoNegro(derecha);
+                display: flex;
+                width: 60%;
+                margin-top: 8%;
+                margin-left: 2rem;
+
+                @include m.telefono{
                     width: 100%;
-                    height: 100%;
-                    justify-content: center;
-                    align-items: center;
-                    padding: 2rem;
-                    box-shadow: -1px 2px 13px 3px rgba(0,0,0,0.27);
-                    border-radius: 2rem;
-                    opacity: 1;
-
-                    p{
-                        text-align: center;
-                        font-weight: 700;
-                    }
+                    margin-top: 0;
+                    margin-left: 0;
+                
                 }
 
-                &#info1{
-                    border: 2px solid v.$verde;
+                // &.cuadros_activos{
+                //     display: block;
+                //     opacity: 1;
+                // }
+            }
+
+            #correo{
+                background: v.$blanco;
+                position: relative;
+                width: auto;
+                margin-top: 2rem;
+                padding: 2rem;
+                @include m.resaltar(v.$azulRey, 500);
+
+                @include m.telefono{
+                    padding: 1rem;
+                    font-size: 15px;
+                }
+            }
+
+            .personaje3{
+                position: relative;
+                top: -23rem;
+                left: 47rem;
+                height: 80%;
+                width: 30%;
+
+                @include m.escritorioHD{
+                    left: 70%;
                 }
 
-                &#info2{
-                    border: 2px solid v.$naranja;
-                }
-
-                &#info3{
-                    border: 2px solid v.$azul1;
-                }
-
-                &#info4{
-                    border: 2px solid v.$amarillo;
-                }
-
-                &#info5{
-                    border: 2px solid v.$gris1;
-                }
-
-                &#info6{
-                    border: 2px solid v.$azulRey;
-                }
-
-                &#info7{
-                    border: 2px solid v.$amarillo;
-                }
-
-                &#info8{
-                    border: 2px solid v.$azul1;
-                }
-
-                &#info9{
-                    border: 2px solid v.$naranja;
-                }
-
-                &#info10{
-                    border: 2px solid v.$verde;
+                @include m.telefono{
+                    top: 2rem;
+                    left: 10rem;
                 }
             }
         }
 
-        .cont-imagen{
-            
-            height: 8rem;
-        }
+        #cont-rojo{
+            position: relative;
+            display: flex;
+            background: v.$warning;
+            top: -3rem;
+            height: 21%;
+            width: 100%;
 
-        #pc-1{
-            grid-area: pc1;
-        }
+            @include m.telefono{
+                top: 0;
+            }
 
-        #pc-2{
-            grid-area: pc2;
-        }
+            p{
+                @include m.resaltar(v.$blanco, 500);
+                padding: 2rem;
+            }
 
-        #pc-3{
-            grid-area: pc3;
-        }
+            .warning{
+                padding: 3rem;
 
-        #pc-4{
-            grid-area: pc4;
-        }
-
-        #pc-5{
-            grid-area: pc5;
-        }
-
-        #pc-6{
-            grid-area: pc6;
-        }
-
-        #pc-7{
-            grid-area: pc7;
-        }
-
-        #pc-8{
-            grid-area: pc8;
-        }
-
-        #pc-9{
-            grid-area: pc9;
-        }
-
-        #pc-10{
-            grid-area: pc10;
-        }
-        
-    }
-
-    #cont-info-movil{
-
-        display: none;
-
-        @include m.tablet{
-
-            grid-column: 1/2;
-            display: block;
-
-            .cont-botones-info{
-
-                cursor: pointer;
-                margin-bottom: 2rem;
-
-                a{
-                    display: block;
-                }
-
-                .cont-imagen{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    padding: 2rem;
-                    margin: 0;
-
-                    img{
-                        width: 6rem;
-                        height: 6rem;
-                    }
-
-                    &#engrane1{
-                        background: v.$verde;
-                    }
-    
-                    &#engrane2{
-                        background: v.$naranja;
-                    }
-    
-                    &#engrane3{
-                        background: v.$azul1;
-                    }
-    
-                    &#engrane4{
-                        background: v.$amarillo;
-                    }
-    
-                    &#engrane5{
-                        background: v.$grisClaro;
-                    }
-    
-                    &#engrane6{
-                        background: v.$azulRey;
-                    }
-    
-                    &#engrane7{
-                        background: v.$amarillo;
-                    }
-    
-                    &#engrane8{
-                        background: v.$azul1;
-                    }
-    
-                    &#engrane9{
-                        background: v.$naranja;
-                    }
-    
-                    &#engrane10{
-                        background: v.$verde;
-                    }
-                }
-                .cuadros-info-movil{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    height: 0;
-                    transition: all .6s ease;
-
-                    p{
-                        visibility: hidden;
-                        text-align: center;
-                        opacity: 0;
-
-                        &.desplegar{
-                            
-                            visibility: visible;
-                            opacity: 1;
-                        }
-                    }
-
-                    .cuadros-info-movil{
-                        transition: all .6s ease;
-                    }
-
-                    &#info-m1{
-                        border: 2px solid v.$verde;
-                    }
-    
-                    &#info-m2{
-                        border: 2px solid v.$naranja;
-                    }
-    
-                    &#info-m3{
-                        border: 2px solid v.$azul1;
-                    }
-    
-                    &#info-m4{
-                        border: 2px solid v.$amarillo;
-                    }
-    
-                    &#info-m5{
-                        background: v.$blanco;
-                        border: 2px solid v.$gris1;
-                    }
-    
-                    &#info-m6{
-                        border: 2px solid v.$azulRey;
-                    }
-    
-                    &#info-m7{
-                        border: 2px solid v.$amarillo;
-                    }
-    
-                    &#info-m8{
-                        border: 2px solid v.$azul1;
-                    }
-    
-                    &#info-m9{
-                        border: 2px solid v.$naranja;
-                    }
-    
-                    &#info-m10{
-                        border: 2px solid v.$verde;
-                    }
-
-                    &.desplegar{
-                        height: auto;
-                        padding: 2rem;
-                    }
-
-                    
+                @include m.telefono{
+                    position: relative;
+                    width: 20rem;
+                    top: 2rem;
+                    height: 10rem;
+                    padding: 1rem;
                 }
             }
         }
