--- a/src/scss/layouts/_pag17.scss
+++ b/src/scss/layouts/_pag17.scss
@@ -1,253 +1,231 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
+#intro-cuestionario{
 
-
-#cont1-pag17{
-    position: relative;
-    display: flex;
-    overflow: hidden;
-    background: v.$colorFuente;
-    height: 20rem;
-
-    @include m.telefono{
-        height: 40rem;
-    }
-    .img-personaje1{
-        position: relative;
-        height: 100%;
-        width: 10%;
-
-        @include m.tablet{
-            width: 15%;
-        }
-
-        @include m.telefono{
-            position: absolute;
-            height: 15rem;
-            width: 10rem;
-            top: 25rem;
-        }
+    &.desaparece{
+        display: none;
     }
 
-    #text-personaje1{
+    .caja{
         display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
         position: relative;
-        text-align: center;
-        @include m.resaltar(v.$blanco,500);
-        width: 70%;
-        height: 50%;
-        top: 5rem;
-        left: 6rem;
 
-        @include m.tablet{
-            top: 3rem;
+        @include m.escritorioHD{
+            background: v.$azulRey;
         }
 
-        @include m.telefono{
+        &::after{
+            content: '';
+            position: absolute;
             width: 100%;
-            padding: 2rem;
+            height: 70%;
+            bottom: 0;
             left: 0;
-            top: 0;
+            background: v.$azulRey;
+            z-index: -1;
+
+            @include m.escritorioHD{
+                display: none;
+            }
+        }
+
+        .cont-imagen{
+            width: 30%;
+
+            
+            @include m.tablet{
+                width: 50%;
+                margin: 0 auto;
+                order: 2;    
+            }
+        }
+
+        .parrafo{
+            padding: 2rem;
+            width: 60%;
+            align-self: flex-end;
+            margin-bottom: 4rem;
+
+            @include m.tablet{
+                width: 90%;
+                margin: 0 auto;
+                order: 1;                
+            }
+
+            p{
+                text-align: center;
+                font-size: 2.4rem;
+                color: v.$blanco;
+
+                @include m.escritorioHD{
+                    font-size: 2rem;
+                }
+            }
+        }
+    }
+
+    .cont-boton{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 2rem;
+        background: v.$grisFondo;
+
+        a{
+            @include m.boton(v.$amarillo);
         }
     }
 }
 
-#cont2-pag17{
-    @include m.grid(2, 0);
+#actividad-cuestionario{
+    display: none;
+
+    &.ver{
+        display: block;
+    }
+
+    .cont-preguntas{
+
+        display: none;
+
+        &.visualizar{
+            display: block;
+        }
+
+        .pregunta{
+
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 12rem;
+
+            @include m.escritorio{
+                height: 14rem;
+            }
+
+            .cont-numero{
+                width: 10%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background: v.$azulRey;
+                color: v.$blanco;
+                
+                h3{
+                    font-size: 2.8rem;
+                }
+            }
+
+            .cont-pregunta{
+                width: 90%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background: v.$azulClaro2;
+
+                p{
+                    padding: 2rem;
+                    font-weight: 500;
+
+                    @include m.escritorio{
+                        font-size: 1.4rem;
+                    }
+                }
+            }
+        }
+
+        .respuestas{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: 2rem;
+
+            .respuestas-caja{
+                width: 18rem;
+                height: 4rem;
+                display: flex;
+                justify-content: center;
+                align-items: center; 
+                color: v.$blanco;
+                background: v.$azulRey;
+                margin-bottom: 3rem;
+                cursor: pointer; 
+                transition: all .3s ease;
+                
+                &:hover{
+                    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+                    transform: scale(1.05);
+                }
+
+                &.fondoCorrecto{
+                    background: v.$verde;
+                    color: v.$blanco;
+                    cursor: default;
+                }
+                
+                &.fondoIncorrecto{
+                    background: v.$rojo2;
+                    color: v.$blanco;
+                    cursor: default;
+                }
+            }
+        }
+    }
+}
+
+#retroActividad1{
+
+    display: none;
+    background: v.$azul2;
+
+    &.visualizar{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;        
+    }
 
     @include m.tablet{
-        @include m.grid(1, 0);
-    }
-
-    #cont-graficaPastel{
-        background: v.$azulPastel;
-        display: flex;
-        justify-content: center;
-        align-items: center;
 
     }
 
-    #cont-buzon{
-        #buzon{
-            display: flex;
-            height: 15rem;
-            background: v.$azulPag17;
-            padding: 2rem;
-
-            #text-buzon{
-                text-align: center;
-                padding: 2rem;
-                @include m.resaltar(v.$colorFuente, 700);
-            }
-        }
-
-        #personaje{
-            display: flex;
-            background: v.$crema;
-            height: 40rem;
-            justify-content: flex-end;
-
-            @include m.telefono{
-                height: 60rem;
-                display: grid;
-            }
-
-            #text-personaje2{
-                padding: 2rem;
-                width: 60%;
-
-                @include m.telefono{
-                    width: 100%;
-                    text-align: justify;
-                }
-
-            }
-
-            .img-personaje2{
-                @include m.telefono{
-                    height: 25rem;
-                    width: 18rem;
-                    margin-left: 5rem;
-                }
-            }
-        }
-    }
-}
-
-#cont3-pag17{
-    background: v.$crema3;
-    height: 20rem;
-    display: flex;
-
-    @include m.telefono{
-        display: grid;
-        height: 42rem
-    }
-
-    .img-personaje3{
-        @include m.telefono{
-            height: 17rem;
-            width: 30rem
-        }
-    }
-
-    #text-personaje3{
-        @include m.globoNegro(izquierda);
-        width: 70%;
-        height: 80%;
-        margin: auto;
+    .cont-imagen{
+        width: 30%;
+        margin: 0;
 
         @include m.tablet{
-            height: 100%;
-            margin-left: 2rem;
-        }
-
-        @include m.telefono{
-            width: 100%;
-            margin: 0;
-        }
-    }
-}
-
-#instrucciones-pag17{
-    background: v.$azulClaro1;
-    height: 10rem;
-    display: flex;
-    padding: 2rem;
-
-    @include m.telefono{
-        height: 20rem;
-    }
-    
-    p{
-        margin-left: 2rem;
-
-        @include m.telefono{
-            margin-left: 0;
-            text-align: justify;
+            width: 50%;
+            margin: 0 auto;
+            order: 2;   
         }
     }
 
-    .img-clic{
-        @include m.telefono{
-            position: absolute;
-            width: 5rem;
-            height: 5rem;
-            left: 29rem;
-            margin-top: 12rem;
-
-        }
-    }
-}
-
-#cont-carrusel{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50rem;
-
-    @include m.telefono{
-        height: 65rem;
-    }
-
-    #carouselExampleControls{
-        width: 80rem;
-        height: 90%;
+    .cont-mensaje{
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 2rem;
+        width: 60%;
 
-        .carousel-inner{
+        @include m.tablet{
             width: 90%;
-            height: 90%;
-            display: flex;
-            background: v.$grisFondo2;
-
-            .carousel-item{
-                .slide{
-                    .txt-slide{
-                        text-align: center;
-                        height: 10rem;
-                        width: 100%;
-                        padding: 2rem;
-                        background: v.$vino2 ;
-                        @include m.resaltar(v.$blanco,500);
-
-                        @include m.telefono{
-                            height: auto;
-                        }
-                    }
-    
-                    .img-slide{
-                        height: 30rem;
-                        width: 27rem;
-                        padding: 2rem;
-                        margin-left: 30%;
-
-                        @include m.telefono{
-                            margin-left: 5%;
-                            margin-top: 5%;
-                        }
-                    }
-
-                    .img-maletin{
-                        height: 20rem;
-                        width: 33rem;
-                        padding: 2rem;
-                        margin-left: 25%;
-                        margin-top: 5%;
-
-                        @include m.telefono{
-                            margin-left: 5%;
-                            width: 28rem;
-                            margin-top: 10rem;
-                        }
-                    }
-                }
-            }
-
+            margin: 0 auto;
+            order: 1;   
         }
 
+        p{
+            text-align: center;
+            color: v.$blanco;
+            font-size: 2.4rem;
+            border: 1px solid v.$blanco;
+            padding: 2rem;
+        }
     }
 }
