--- a/src/scss/layouts/_pag18.scss
+++ b/src/scss/layouts/_pag18.scss
@@ -1,231 +1,289 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-#intro-cuestionario{
+#cont-intro19{
 
-    &.desaparece{
-        display: none;
-    }
-
-    .caja{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        position: relative;
-
-        @include m.escritorioHD{
-            background: v.$azulRey;
-        }
-
-        &::after{
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 70%;
-            bottom: 0;
-            left: 0;
-            background: v.$azulRey;
-            z-index: -1;
-
-            @include m.escritorioHD{
-                display: none;
-            }
-        }
-
-        .cont-imagen{
-            width: 30%;
-
-            
-            @include m.tablet{
-                width: 50%;
-                margin: 0 auto;
-                order: 2;    
-            }
-        }
-
-        .parrafo{
-            padding: 2rem;
-            width: 60%;
-            align-self: flex-end;
-            margin-bottom: 4rem;
-
-            @include m.tablet{
-                width: 90%;
-                margin: 0 auto;
-                order: 1;                
-            }
-
-            p{
-                text-align: center;
-                font-size: 2.4rem;
-                color: v.$blanco;
-
-                @include m.escritorioHD{
-                    font-size: 2rem;
-                }
-            }
-        }
-    }
-
-    .cont-boton{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    .titulo{
         padding: 2rem;
-        background: v.$grisFondo;
-
-        a{
-            @include m.boton(v.$amarillo);
-        }
-    }
-}
-
-#actividad-cuestionario{
-    display: none;
-
-    &.ver{
-        display: block;
+        text-align: center;
+        color: v.$blanco;
+        background: v.$verde;
+        font-weight: 700;
     }
 
-    .cont-preguntas{
+    .tarjetas{
+        margin-top: 2rem;
+        min-height: 40rem;
+        @include m.grid(3, 2rem);
 
-        display: none;
-
-        &.visualizar{
-            display: block;
+        @include m.escritorio{
+            @include m.grid(2, 2rem);
         }
 
-        .pregunta{
+        @include m.tablet{
+            @include m.grid(1, 2rem);
+        }
 
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 12rem;
+        .tarjeta{
+            border-radius: 1rem;
+            padding: 2rem;
+            font-weight: 500;
 
-            @include m.escritorio{
-                height: 14rem;
-            }
+            &#tarjeta1{
+                background: v.$fondo6;
 
-            .cont-numero{
-                width: 10%;
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                background: v.$azulRey;
-                color: v.$blanco;
-                
-                h3{
-                    font-size: 2.8rem;
+                @include m.tablet{
+                    grid-column: 1/2;
                 }
             }
 
-            .cont-pregunta{
-                width: 90%;
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                background: v.$azulClaro2;
+            &#tarjeta2{
+                background: v.$fondo4;
 
-                p{
+                @include m.tablet{
+                    grid-column: 1/2;
+                }
+            }
+
+            &#tarjeta3{
+                background: v.$fondo1;
+
+                @include m.escritorio{
+                    grid-column: 1/3;
+                }
+
+                @include m.tablet{
+                    grid-column: 1/2;
+                }
+            }
+        }
+    }
+
+    #titulo2{
+        margin-top: 2rem;
+        width: 100%;
+        padding: 2rem;
+        background: v.$naranja;
+        color: v.$blanco;
+    }
+
+    #columnas{
+
+        @include m.grid(2, 0);
+
+        @include m.telefono{
+            @include m.grid(1, 0);
+        }
+
+        #columna1{
+            background: v.$fondo2;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            flex-wrap: wrap;
+
+            .cont-imagen{
+                width: 45%;
+                margin: 0;
+
+                @include m.escritorio{
+                    order: 2;
+                }
+            }
+
+            .cuadro{
+                width: 45%;
+                box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+
+                @include m.escritorio{
+                    width: 80%;
+                    order: 1;
+                }
+
+                .titulo{
+                    background: v.$azulRey;
+                }
+
+                .info{
                     padding: 2rem;
-                    font-weight: 500;
+                    background: v.$blanco;
 
-                    @include m.escritorio{
-                        font-size: 1.4rem;
+                    p{
+                        @include m.resaltar(v.$azulRey, 700);
+                    }
+                }
+
+            }
+
+        }
+
+        #columna2{
+
+            #caja1{
+
+                .titulo{
+                    text-align: left;
+                }
+
+                .contenedor1_1{
+
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-wrap: wrap;
+
+                    .cont-globo{
+                        width: 48%;
+                        padding: 2rem;
+
+                        @include m.escritorio{
+                            width: 80%;
+                        }
+
+                        .globo{
+                            @include m.globoNegro(derecha);
+                        }
+                    }
+
+                    .cont-imagen{
+                        width: 48%;
+                        margin: 0;
+                    }
+                }
+            }
+
+            #caja2{
+                padding: 2rem;
+                background: v.$fondo4;
+
+                .globo{
+                    @include m.globoNegro(arriba);
+
+                    &::after{
+                        left: 80%;
+                        top: -15%;
                     }
                 }
             }
         }
+    }
 
-        .respuestas{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding: 2rem;
+    #cards{
 
-            .respuestas-caja{
-                width: 18rem;
-                height: 4rem;
-                display: flex;
-                justify-content: center;
-                align-items: center; 
-                color: v.$blanco;
-                background: v.$azulRey;
-                margin-bottom: 3rem;
-                cursor: pointer; 
-                transition: all .3s ease;
-                
-                &:hover{
-                    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-                    transform: scale(1.05);
-                }
+        margin-top: 2rem;
+        background: v.$fondo2;
+        padding: 2rem;
+        @include m.grid(4, 2rem);
 
-                &.fondoCorrecto{
-                    background: v.$verde;
-                    color: v.$blanco;
-                    cursor: default;
-                }
-                
-                &.fondoIncorrecto{
-                    background: v.$rojo2;
-                    color: v.$blanco;
-                    cursor: default;
+        @include m.escritorioHD{
+            @include m.grid(2, 2rem);
+        }
+
+        @include m.telefono{
+            @include m.grid(1, 2rem);
+        }
+
+        .operaciones{
+            grid-column: 1/3;
+
+            @include m.telefono{
+                grid-column: 1/2;
+            }
+
+            .titulo{
+                min-height: 8.5rem;
+                background: v.$naranja;
+                border-radius: 1rem;
+                margin-bottom: 2rem;
+            }
+
+            .columnas{
+                @include m.grid(2, 2rem);
+
+                @include m.telefono{
+                    @include m.grid(1, 2rem);
                 }
             }
         }
-    }
-}
 
-#retroActividad1{
+        .estructuras{
+            grid-column: 3/4;
 
-    display: none;
-    background: v.$azul2;
+            @include m.escritorioHD{
+                grid-column: 1/2;
+            }
 
-    &.visualizar{
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;        
-    }
-
-    @include m.tablet{
-
-    }
-
-    .cont-imagen{
-        width: 30%;
-        margin: 0;
-
-        @include m.tablet{
-            width: 50%;
-            margin: 0 auto;
-            order: 2;   
-        }
-    }
-
-    .cont-mensaje{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 2rem;
-        width: 60%;
-
-        @include m.tablet{
-            width: 90%;
-            margin: 0 auto;
-            order: 1;   
+            .titulo{
+                min-height: 8.5rem;
+                background: v.$amarillo;
+                border-radius: 1rem;
+                margin-bottom: 2rem;
+            }
         }
 
-        p{
-            text-align: center;
-            color: v.$blanco;
-            font-size: 2.4rem;
-            border: 1px solid v.$blanco;
+        .capacitacion{
+            grid-column: 4/5;
+
+            @include m.escritorioHD{
+                grid-column: 2/3;
+            }
+
+            @include m.telefono{
+                grid-column: 1/2;
+            }
+
+            .titulo{
+                min-height: 8.5rem;
+                background: v.$azulRey;
+                border-radius: 1rem;
+                margin-bottom: 2rem;
+            }
+        }
+
+        .tarjetas1_1{
+
+            .cont-imagen{
+                width: 20rem;
+                height: 20rem;
+                margin: 0 auto;
+            }
+        }
+
+        .info{
             padding: 2rem;
+            min-height: 35rem;
+            border-bottom-left-radius: 2rem;
+            border-bottom-right-radius: 2rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+            background: v.$blanco;
+
+            p{
+                text-align: center;
+
+                span{
+                    font-weight: 700;
+                }
+            }
+
+            &#info1{
+                border: 1px solid v.$naranja;
+            }
+            
+            &#info2{
+                border: 1px solid v.$naranja;
+            }
+
+            &#info3{
+                border: 1px solid v.$amarillo;
+            }
+
+            &#info4{
+                border: 1px solid v.$azulRey;
+            }
         }
     }
 }
