--- a/src/scss/layouts/_pag19.scss
+++ b/src/scss/layouts/_pag19.scss
@@ -1,289 +1,192 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-#cont-intro19{
 
-    .titulo{
-        padding: 2rem;
-        text-align: center;
-        color: v.$blanco;
-        background: v.$verde;
-        font-weight: 700;
+#cont-azul{
+    background: v.$azulRey;
+    height: 5rem;
+}
+
+#cont-pag06{
+    @include m.grid(4, 0);
+
+    @include m.tablet{
+        @include m.grid(1, 0);
     }
 
-    .tarjetas{
-        margin-top: 2rem;
-        min-height: 40rem;
-        @include m.grid(3, 2rem);
+    @include m.telefono{
+        display: none;
+    }
 
-        @include m.escritorio{
-            @include m.grid(2, 2rem);
-        }
+    #cont-rojo{
+        grid-column: 1/2;
+        background: v.$naranjaPag03;
 
         @include m.tablet{
-            @include m.grid(1, 2rem);
+            height: 40rem;
         }
 
-        .tarjeta{
-            border-radius: 1rem;
-            padding: 2rem;
-            font-weight: 500;
-
-            &#tarjeta1{
-                background: v.$fondo6;
-
-                @include m.tablet{
-                    grid-column: 1/2;
-                }
-            }
-
-            &#tarjeta2{
-                background: v.$fondo4;
-
-                @include m.tablet{
-                    grid-column: 1/2;
-                }
-            }
-
-            &#tarjeta3{
-                background: v.$fondo1;
-
-                @include m.escritorio{
-                    grid-column: 1/3;
-                }
-
-                @include m.tablet{
-                    grid-column: 1/2;
-                }
-            }
-        }
-    }
-
-    #titulo2{
-        margin-top: 2rem;
-        width: 100%;
-        padding: 2rem;
-        background: v.$naranja;
-        color: v.$blanco;
-    }
-
-    #columnas{
-
-        @include m.grid(2, 0);
-
-        @include m.telefono{
-            @include m.grid(1, 0);
-        }
-
-        #columna1{
-            background: v.$fondo2;
+        #clic-pag06{
             display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            flex-wrap: wrap;
+            padding: 2rem;
+            height: 10rem;
+            background: v.$azulClaro2;
 
-            .cont-imagen{
-                width: 45%;
-                margin: 0;
-
-                @include m.escritorio{
-                    order: 2;
-                }
+            @include m.tablet{
+                margin: auto;
+                height: 8rem;
             }
 
-            .cuadro{
-                width: 45%;
-                box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+            .mano-pag06{
+                width: 7rem;
+                height: 5rem;
 
-                @include m.escritorio{
-                    width: 80%;
-                    order: 1;
-                }
-
-                .titulo{
-                    background: v.$azulRey;
-                }
-
-                .info{
-                    padding: 2rem;
-                    background: v.$blanco;
-
-                    p{
-                        @include m.resaltar(v.$azulRey, 700);
-                    }
-                }
-
-            }
-
-        }
-
-        #columna2{
-
-            #caja1{
-
-                .titulo{
-                    text-align: left;
-                }
-
-                .contenedor1_1{
-
-                    width: 100%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    flex-wrap: wrap;
-
-                    .cont-globo{
-                        width: 48%;
-                        padding: 2rem;
-
-                        @include m.escritorio{
-                            width: 80%;
-                        }
-
-                        .globo{
-                            @include m.globoNegro(derecha);
-                        }
-                    }
-
-                    .cont-imagen{
-                        width: 48%;
-                        margin: 0;
-                    }
-                }
-            }
-
-            #caja2{
-                padding: 2rem;
-                background: v.$fondo4;
-
-                .globo{
-                    @include m.globoNegro(arriba);
-
-                    &::after{
-                        left: 80%;
-                        top: -15%;
-                    }
-                }
-            }
-        }
-    }
-
-    #cards{
-
-        margin-top: 2rem;
-        background: v.$fondo2;
-        padding: 2rem;
-        @include m.grid(4, 2rem);
-
-        @include m.escritorioHD{
-            @include m.grid(2, 2rem);
-        }
-
-        @include m.telefono{
-            @include m.grid(1, 2rem);
-        }
-
-        .operaciones{
-            grid-column: 1/3;
-
-            @include m.telefono{
-                grid-column: 1/2;
-            }
-
-            .titulo{
-                min-height: 8.5rem;
-                background: v.$naranja;
-                border-radius: 1rem;
-                margin-bottom: 2rem;
-            }
-
-            .columnas{
-                @include m.grid(2, 2rem);
-
-                @include m.telefono{
-                    @include m.grid(1, 2rem);
+                @include m.tablet{
+                    width: 0;
+                    height: 0;
                 }
             }
         }
 
-        .estructuras{
-            grid-column: 3/4;
+        .personaje{
+            margin-top: 2rem;
 
-            @include m.escritorioHD{
-                grid-column: 1/2;
-            }
-
-            .titulo{
-                min-height: 8.5rem;
-                background: v.$amarillo;
-                border-radius: 1rem;
-                margin-bottom: 2rem;
-            }
-        }
-
-        .capacitacion{
-            grid-column: 4/5;
-
-            @include m.escritorioHD{
-                grid-column: 2/3;
-            }
-
-            @include m.telefono{
-                grid-column: 1/2;
-            }
-
-            .titulo{
-                min-height: 8.5rem;
-                background: v.$azulRey;
-                border-radius: 1rem;
-                margin-bottom: 2rem;
-            }
-        }
-
-        .tarjetas1_1{
-
-            .cont-imagen{
+            @include m.tablet{
+                display: inline-block;
+                height: 30rem;
                 width: 20rem;
-                height: 20rem;
-                margin: 0 auto;
             }
         }
+        
+    }
 
-        .info{
+    #cont-rosa{
+        grid-column: 2/5;
+        display: flex;
+        background: v.$rosaPag06;
+
+        @include m.tablet{
+            grid-column: 1/2;
+        }
+
+        .libros{
+            @include m.grid(3, 1rem);
             padding: 2rem;
-            min-height: 35rem;
-            border-bottom-left-radius: 2rem;
-            border-bottom-right-radius: 2rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
-            background: v.$blanco;
+            width: 100%;
+            height: 100%;
 
-            p{
+            .cuadro-pag06{
+                display: none;
+                opacity: 0;
+                transition: all .3s ease;
+            }
+
+            .btn-pag06:hover{
+                @include m.parpadeo;
+            } 
+
+            .img-libro{
+                width: 40%;
+                margin: auto;
+            }
+
+            h4{
                 text-align: center;
+                margin-top: 2rem;
+            }
 
-                span{
-                    font-weight: 700;
+            #cuadro1{
+                @include m.cuadrosPag06(v.$azulPag06, v.$azulFuertePag06, left);
+                @include m.resaltar(v.$azulFuente, 600);
+    
+                &.cuadros_activos{
+                    display: block;
+                    opacity: 1;
                 }
             }
 
-            &#info1{
-                border: 1px solid v.$naranja;
-            }
-            
-            &#info2{
-                border: 1px solid v.$naranja;
-            }
 
-            &#info3{
-                border: 1px solid v.$amarillo;
-            }
+            #cuadro2{
+                @include m.cuadrosPag06(v.$naranjaPag06, v.$naranjaFuertePag06, left);
+                @include m.resaltar(v.$naranjaFuentePag06, 600);
 
-            &#info4{
-                border: 1px solid v.$azulRey;
+                &.cuadros_activos{
+                    display: block;
+                    opacity: 1;
+                }
+            }
+            #cuadro3{
+                @include m.cuadrosPag06(v.$verdeClaroPag03, v.$verdeFuertePag06, center);
+                @include m.resaltar(v.$verde, 600);
+
+                &.cuadros_activos{
+                    display: block;
+                    opacity: 1;
+                }
             }
         }
     }
 }
+
+#cont-pag06Tel{
+    display: none;
+
+    @include m.telefono{
+        display: inline;
+        #cont-img{
+            display: flex;
+            width: 100%;
+            height: 20rem;
+            background: v.$naranjaPag03;
+
+            #clic-pag06Tel{
+                padding: 2rem;
+                width: 80%;
+                height: 50%;
+                display: flex;
+                background: v.$azulClaro2;
+                margin-left: 3rem;
+                
+                p{
+                    margin: auto;
+                }
+            }
+        }
+
+        .cuadrosPag06-tel{
+            padding: 2rem;
+            display: none;
+            opacity: 0;
+            transition: all .3s ease;
+        }
+
+        #cuadro1-tel{
+            background: v.$azulPag06;
+            @include m.resaltar(v.$azulRey, 500);
+
+            &.cuadros_activos{
+                display: block;
+                opacity: 1;
+            }
+        }
+        #cuadro2-tel{
+            background: v.$naranjaPag06;
+            @include m.resaltar(v.$naranjaFuentePag06, 500);
+
+            &.cuadros_activos{
+                display: block;
+                opacity: 1;
+            }
+        }
+        #cuadro3-tel{
+            background: v.$verdePag06;
+            @include m.resaltar(v.$verde, 500);
+
+            &.cuadros_activos{
+                display: block;
+                opacity: 1;
+            }
+        }
+    }
+}
+
