--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -120,3 +120,6 @@ $naranjaFuerte: #FF5E00;
 $grisFondo3: #E6E6E6;
 $crema4: #FDF5EB;
 $crema5: #FFF3CF;
+$crema6: #FAD7D1;
+
+$azulClaro3: #D2DCEA;
