:white_check_mark: Add Nuevas Paginas

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -118,6 +118,7 @@ $azulPag22: #D1DFF6;
 $azulPag17: #ECF5FF;
 $naranjaFuerte: #FF5E00;
 $grisFondo3: #E6E6E6;
+$grisFondo4: #fcfcfc;
 $crema4: #FDF5EB;
 $crema5: #FFF3CF;
 $crema6: #FAD7D1;
