--- a/src/scss/layouts/_pag26.scss
+++ b/src/scss/layouts/_pag26.scss
@@ -1,351 +1,121 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-#intro-actividad25{
+.versus{
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: v.$grisFondo;
 
-    &.retro{
+    @include m.tablet{
         display: none;
     }
 
-    .cont-imagen{
-        width: 20%;
-        margin: 0;
+    .seguro{
+        width: 45%;
+        background: v.$azulRey;
+        color: v.$blanco;
+        text-align: center;
     }
 
-    .instrucciones{
-        width: 70%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        padding: 2rem;
+    .vs{
+        width: 10%;
+        background: v.$amarillo;
+        color: v.$azulRey;
+        text-align: center;
+    }
 
-        p{
-            text-align: center;
-            color: v.$blanco;
-            font-weight: 700;
-        }
+    .reaseguro{
+        width: 45%;
+        background: v.$verde;
+        color: v.$blanco;
+        text-align: center;
     }
 }
 
-.cont-inicio{
-    width: 100%;
-    height: 10rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: v.$azul1;
+.tablaComparacion{
+    @include m.grid(2, 0);
 
-    &.retro{
-        display: none;
+    @include m.tablet{
+        @include m.grid(1, 0);
     }
 
-    a{
-        @include m.boton(v.$amarillo);
-
-    }
-}
-
-#cont-actividad25{
-    
-    margin-top: 4rem;
-    @include m.grid(5, 1rem);
-    position: relative;
-
-    &.retro{
-        display: none;
-    }
-
-    @include m.escritorioHD{
-        @include m.grid(1, 1rem);
-    }
-    
-
-    #cont-definiciones{
-        grid-column: 1/2;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-
-        
-
-        .cont-mano{
-            background: v.$azulClaro2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding: 2rem;
-            margin-bottom: 2rem;
-
-            @include m.escritorioHD{
-                width: 100%;
-            }
+    .listaSeguro{
+        h1{
+            display: none;
 
             @include m.tablet{
-                display: none;
-            }
-
-            .cont-imagen{
-                width: 6rem;
-                height: 6rem;
-                border: 5px solid v.$blanco;
-                border-radius: 50%;
-                padding: 1rem;
-            }
-            
-            p{
+                display: block;
                 text-align: center;
-            }
-        }
-
-        .cont-drag{
-
-            @include m.escritorioHD{
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                flex-wrap: wrap;
-            }
-
-            @include m.tablet{
-                display: none;
-            }
-            
-            p{
-                font-size: 1.4rem;
-                padding: 1rem 2rem;
-                text-align: center;
-                border: 1px solid v.$blanco;
-                font-weight: 700;
-                background: v.$colorFuente;
                 color: v.$blanco;
-                cursor: pointer;
+                background: v.$azulRey;
+            }
+        }
+        font-size: 3.2rem;
+        color: v.$azulRey;
 
-                @include m.escritorioHD{
-                    width: 24%;
-                    height: 6rem;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                }
+        @include m.escritorio(){
+            font-size: 1.8rem;
+        }
+
+        .caja1, .caja3{
+            background: v.$fondo2;
+            padding: 6rem;
+        }
+        
+        .caja2, .caja4{
+            background: v.$grisFondo4;
+            padding: 6rem;
+        }
+    }
+
+    .listaReaseguro{
+        h1{
+            display: none;
+
+            @include m.tablet{
+                display: block;
+                text-align: center;
+                color: v.$blanco;
+                background: v.$verde;
+            }
+        }
+        font-size: 3.2rem;
+        color: v.$verde;
+        display: flex;
+        flex-direction: column;
+
+        @include m.escritorio(){
+            font-size: 1.8rem;
+        }
+
+        .caja1{
+            padding: 6rem;
+        }
+
+        .caja2{
+            padding: 6rem;
+        }
+
+        figure{
+            width: 25rem;
+            height: 35rem;
+            align-self: flex-end;
+
+            @include m.tablet{
+                align-self: center;
             }
         }
     }
 
-    .mano-responsive{
+    .separacionVS{
         display: none;
 
         @include m.tablet{
-            display: flex;
-        }
-    }
-
-    #cont-drop{
-        grid-column: 2/6;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 6rem 2rem;
-        flex-wrap: wrap;
-
-        @include m.escritorioHD{
-            grid-column: 1/2; 
-            padding: 2rem 0;  
-        }
-
-        
-
-        .posts{
-            width: 23%;
-            height: 35rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-direction: column;
-            margin-bottom: 2rem;
-
-            @include m.tablet{
-                width: 90%;
-                margin: 0 auto;
-                height: auto;
-            }
-
-            .cuadro{
-
-                height: 27rem;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 2rem;
-
-                p{
-                    font-size: 1.1rem;
-                    font-weight: 700;
-
-                    @include m.tablet{
-                        font-size: 1.6rem;
-                    }
-                }
-
-                &#cuadro1{
-                    @include m.posit(v.$amarillo);
-                }
-
-                &#cuadro2{
-                    @include m.posit(v.$naranjaPag03);
-                }
-
-                &#cuadro3{
-                    @include m.posit(v.$azul1);
-                }
-
-                &#cuadro4{
-                    @include m.posit(v.$verde);
-                }
-
-                &#cuadro5{
-                    @include m.posit(v.$grisFuerte);
-                }
-
-                &#cuadro6{
-                    @include m.posit(v.$lila);
-                }
-
-                &#cuadro7{
-                    @include m.posit(v.$naranja);
-                }
-
-                &#cuadro8{
-                    @include m.posit(v.$azulPag03);
-                }
-
-                p{
-                    text-align: center;
-                }
-            }
-
-            .drop{
-                background: v.$grisFondo;
-                width: 100%;
-                height: 8rem;
-                transition: all .3s ease;
-                overflow: hidden;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+            display: block;
                 text-align: center;
-                font-weight: 700;
-
-                @include m.tablet{
-                    display: none;
-                }
-
-                &:hover{
-                    background: darken(v.$grisFondo,  10);
-                }
-            }
-
-            .repuestas-responsive1{
-                display: none;
-
-                @include m.tablet{
-                    display: block;
-                    margin-bottom: 2rem;
-                    width: 90%;
-
-                    div{
-                        padding: 2rem;
-                        margin: 1rem 0;
-                        background: v.$colorFuente;
-                        text-align: center;
-                        color: v.$blanco;
-                        transition: all .3s ease;
-
-                        &:hover{
-                            transform: scale(1.05);
-                            box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.75);
-                            cursor: pointer;
-                        }
-
-                        &.fondoCorrecto{
-                            background: v.$verde;
-                            color: v.$blanco;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-
-
-#box{
-    display: none;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 75vh;
-    background: v.$azul1;
-    z-index: 10;
-    padding: 6rem 3rem 0 3rem;
-    opacity: 0;
-    transition: all .6s ease;
-
-
-    &.bien{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        opacity: 1;
-    }
-
-    &::after{
-        content: '';
-        width: 100%;
-        height: 20rem;
-        position: absolute;
-        background: v.$azulRey;
-        top: 40%;
-        left: 0;
-        z-index: -1;
-
-        @include m.escritorio{
-            display: none;
-        }
-    }
-
-    .cont-imagen{
-        width: 30%;
-        align-self: flex-end;
-
-        @include m.escritorio{
-            width: 50%;
-            order: 2;
-            margin: 0 auto;   
-        }
-    }
-
-    .cont-mensaje{
-        width: 60%;
-        font-size: 2rem;
-        font-weight: 700;
-        color: v.$blanco;
-        text-align: center;
-        border: 2px solid v.$blanco;
-        padding: 3.2rem;
-
-        @include m.escritorio{
-            width: 100%;
-            order: 1;   
+                color: v.$azulRey;
+                background: v.$amarillo;
         }
     }
 }
