--- a/src/scss/layouts/_pag28.scss
+++ b/src/scss/layouts/_pag28.scss
@@ -1,101 +1,95 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-#cont-evaluacion{
-    background: v.$fondo6;
+#intro-actividad25{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: v.$grisFondo;
 
-    
-    #intro-evaluacion{
-
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: relative;
-        flex-wrap: wrap;
-
-        @include m.tablet{
-            justify-content: center;   
-        }
-        
-        &::after{
-            content: '';
-            background: v.$blanco;
-            width: 100%;
-            height: 30%;
-            top: 0;
-            left: 0;
-            position: absolute;
-        }
-    
-        .cont-imagen{
-            width: 30%;
-            z-index: 1;
-        }
-    
-        .cont-mensaje{
-            width: 60%;
-            padding: 2rem;
-            text-align: center;
-            font-size: 2.8rem;
-            font-weight: 700;
-            z-index: 1;
-            align-self: flex-end;
-
-            @include m.escritorioHD{
-                font-size: 2.2rem;
-            }
-            
-            @include m.escritorio{
-                font-size: 1.8rem;
-            }
-
-            @include m.tablet{
-                width: 100%;
-                font-size: 2.2rem;
-            }
-        }
-
-        &.ocultar{
-            display: none;
-        }
+    &.retro{
+        display: none;
     }
 
-    #instruccionEvaluacion{
-        text-align: center;
-        padding: 2rem;
-        color: v.$blanco;
-        font-weight: 700;
-        background: v.$azul1;
-
-        &.ocultar{
-            display: none;
-        }
+    .cont-imagen{
+        width: 20%;
+        margin: 0;
     }
 
-    #cont-inicioEvaluacion{
-        padding: 2rem;
+    .instrucciones{
+        width: 70%;
         display: flex;
         justify-content: center;
         align-items: center;
-        
-        a{
-            @include m.boton(v.$amarillo);
-        }
+        flex-direction: column;
+        padding: 2rem;
 
-        &.ocultar{
-            display: none;
+        p{
+            text-align: center;
+            color: v.$blanco;
+            font-weight: 700;
         }
     }
+}
 
-    #cont-preguntas{
+.cont-inicio{
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: v.$azul1;
 
-        #instruccion{
+    &.retro{
+        display: none;
+    }
 
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
+    a{
+        @include m.boton(v.$amarillo);
+
+    }
+}
+
+#cont-actividad25{
+    
+    margin-top: 4rem;
+    @include m.grid(5, 1rem);
+    position: relative;
+
+    &.retro{
+        display: none;
+    }
+
+    @include m.escritorioHD{
+        @include m.grid(1, 1rem);
+    }
+    
+
+    #cont-definiciones{
+        grid-column: 1/2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        
+
+        .cont-mano{
             background: v.$azulClaro2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
             padding: 2rem;
+            margin-bottom: 2rem;
+
+            @include m.escritorioHD{
+                width: 100%;
+            }
+
+            @include m.tablet{
+                display: none;
+            }
 
             .cont-imagen{
                 width: 6rem;
@@ -104,317 +98,254 @@
                 border-radius: 50%;
                 padding: 1rem;
             }
-
-            #parrafo{
-                font-weight: 700;
-
-                @include m.telefono{
-                    width: 60%;
-                }
+            
+            p{
+                text-align: center;
             }
         }
 
-        &.ocultar{
-            display: none;
-        }
+        .cont-drag{
 
-        .preguntas{
-
-            padding: 2rem 4rem;
-
-           .cont-preguntas{
-
+            @include m.escritorioHD{
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                margin: 4rem 0;
+                flex-wrap: wrap;
+            }
 
-                .numero-Pregunta{
-                    width: 10%;
+            @include m.tablet{
+                display: none;
+            }
+            
+            p{
+                font-size: 1.4rem;
+                padding: 1rem 2rem;
+                text-align: center;
+                border: 1px solid v.$blanco;
+                font-weight: 700;
+                background: v.$colorFuente;
+                color: v.$blanco;
+                cursor: pointer;
+
+                @include m.escritorioHD{
+                    width: 24%;
+                    height: 6rem;
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    color: v.$azulRey;
+                }
+            }
+        }
+    }
 
-                    h2{
-                        font-weight: 700;
+    .mano-responsive{
+        display: none;
+
+        @include m.tablet{
+            display: flex;
+        }
+    }
+
+    #cont-drop{
+        grid-column: 2/6;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 6rem 2rem;
+        flex-wrap: wrap;
+
+        @include m.escritorioHD{
+            grid-column: 1/2; 
+            padding: 2rem 0;  
+        }
+
+        
+
+        .posts{
+            width: 23%;
+            height: 35rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: column;
+            margin-bottom: 2rem;
+
+            @include m.tablet{
+                width: 90%;
+                margin: 0 auto;
+                height: auto;
+            }
+
+            .cuadro{
+
+                height: 27rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 2rem;
+
+                p{
+                    font-size: 1.1rem;
+                    font-weight: 700;
+
+                    @include m.tablet{
+                        font-size: 1.6rem;
                     }
                 }
 
-                .pregunta{
+                &#cuadro1{
+                    @include m.posit(v.$amarillo);
+                }
+
+                &#cuadro2{
+                    @include m.posit(v.$naranjaPag03);
+                }
+
+                &#cuadro3{
+                    @include m.posit(v.$azul1);
+                }
+
+                &#cuadro4{
+                    @include m.posit(v.$verde);
+                }
+
+                &#cuadro5{
+                    @include m.posit(v.$grisFuerte);
+                }
+
+                &#cuadro6{
+                    @include m.posit(v.$lila);
+                }
+
+                &#cuadro7{
+                    @include m.posit(v.$naranja);
+                }
+
+                &#cuadro8{
+                    @include m.posit(v.$azulPag03);
+                }
+
+                p{
+                    text-align: center;
+                }
+            }
+
+            .drop{
+                background: v.$grisFondo;
+                width: 100%;
+                height: 8rem;
+                transition: all .3s ease;
+                overflow: hidden;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                font-weight: 700;
+
+                @include m.tablet{
+                    display: none;
+                }
+
+                &:hover{
+                    background: darken(v.$grisFondo,  10);
+                }
+            }
+
+            .repuestas-responsive1{
+                display: none;
+
+                @include m.tablet{
+                    display: block;
+                    margin-bottom: 2rem;
                     width: 90%;
-                    padding: 2rem;
-                    background: v.$blanco;
 
-                    p{
-                        font-weight: 700;
-                    }
-                }
-           }
-
-            .cont-respuestas{
-                
-                position: relative;
-                
-                .incisos{
-
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    margin: 2rem 0;
-                    
-                    .letras{
-                        width: 10%;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        color: v.$azulRey;
-
-                        h2{
-                            font-weight: 700;
-                        }
-                    }
-
-                    .respuesta{
-                        width: 90%;
+                    div{
                         padding: 2rem;
-                        background: v.$fondo1;
+                        margin: 1rem 0;
+                        background: v.$colorFuente;
+                        text-align: center;
+                        color: v.$blanco;
                         transition: all .3s ease;
-                        cursor: pointer;
+
+                        &:hover{
+                            transform: scale(1.05);
+                            box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.75);
+                            cursor: pointer;
+                        }
 
                         &.fondoCorrecto{
                             background: v.$verde;
                             color: v.$blanco;
-                            cursor: default;
-                        }
-                        
-                        &.fondoIncorrecto{
-                            background: v.$rojo2;
-                            color: v.$blanco;
-                            cursor: default;
-                        }
-    
-                        p{
-                            font-weight: 700;
-                        }
-
-                        &:hover{
-
-                            box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.44);
-                            transform: scale(1.01);
                         }
                     }
                 }
-
-                .bloquear-respuesta{
-
-                    position: absolute;
-                    background: transparent;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    display: none;
-
-                    &.activado{
-                        display: block;
-                    }
-
-                }                
             }
         }
     }
+}
 
-    .cont-btnEvaluar{
-        padding: 2rem;
+
+
+#box{
+    display: none;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 75vh;
+    background: v.$azul1;
+    z-index: 10;
+    padding: 6rem 3rem 0 3rem;
+    opacity: 0;
+    transition: all .6s ease;
+
+
+    &.bien{
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
+        opacity: 1;
+    }
 
-        a{
-            @include m.boton(v.$amarillo);
-        }
+    &::after{
+        content: '';
+        width: 100%;
+        height: 20rem;
+        position: absolute;
+        background: v.$azulRey;
+        top: 40%;
+        left: 0;
+        z-index: -1;
 
-        &.ocultar{
+        @include m.escritorio{
             display: none;
         }
     }
 
-    #retro-positiva{
+    .cont-imagen{
+        width: 30%;
+        align-self: flex-end;
 
-        display: none;
-        transition: all .3s ease;
-
-        &.visualizar{
-            display: block;
-        }
-
-        .mensaje{
-            padding: 2rem;
-            background: v.$azulRey;
-
-            p{
-                text-align: center;
-                color: v.$blanco;
-                font-size: 2.4rem;
-                font-weight: 700;
-            }
-        }
-
-        .cont-calificacion{
-            padding: 2rem;
-
-            p{
-                text-align: center;
-                font-size: 4.2rem;
-                font-weight: 700;
-            }
-        }
-
-        .final{
-
-            @include m.grid(2, 2rem);
-
-            @include m.tablet{
-                @include m.grid(1, 2rem);
-            }
-
-            .cont-imagen{
-                margin: 0;
-            }
-
-            .cont-info{
-                display: flex;
-                flex-direction: column;
-
-                .parrafo{
-                    height: 50%;
-                    background: v.$amarillo;
-                    padding: 2rem;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-
-                    p{
-                        text-align: center;
-                        font-weight: 500;
-                        color: v.$blanco;
-                        font-size: 2rem;
-                    }
-
-                    @include m.tablet{
-                        margin-bottom: 2rem;
-                    }
-                }
-
-                .botones{
-                    height: 50%;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: space-evenly;
-                    
-                    @include m.tablet{
-                        width: 100%;
-                        flex-direction: row;
-                        padding: 2rem;
-                    }
-
-                    @include m.telefono{
-                        flex-direction: column;
-                    }
-
-                    #registrar{
-                        @include m.boton(v.$verde);
-                        width: 18rem;
-                        text-align: center;
-
-                        @include m.telefono{
-                            margin-bottom: 2rem;
-                        }
-                    }
-
-                    #cerrar{
-                        @include m.boton(v.$azulRey);
-                        width: 18rem;
-                        text-align: center;
-                    }
-                }
-            }
+        @include m.escritorio{
+            width: 50%;
+            order: 2;
+            margin: 0 auto;   
         }
     }
 
-    #retro-negativa{
+    .cont-mensaje{
+        width: 60%;
+        font-size: 2rem;
+        font-weight: 700;
+        color: v.$blanco;
+        text-align: center;
+        border: 2px solid v.$blanco;
+        padding: 3.2rem;
 
-        display: none;
-        transition: all .3s ease;
-
-        &.visualizar{
-            display: block;
-
-            @include m.escritorio{
-                display: flex;
-                flex-direction: column-reverse;
-            }
-        }
-
-        .mensaje{
-            padding: 2rem;
-            background: v.$colorFuente;
-
-            p{
-                color: v.$blanco;
-                font-size: 2.4rem;
-                text-align: center;
-            }
-        }
-
-        .final{
-            @include m.grid(2, 2rem);
-
-            @include m.escritorio{
-                @include m.grid(1, 2rem);
-                margin-bottom: 4rem;
-            }
-
-            .cont-imagen{
-                width: 35rem;
-                height: 50rem;
-                margin: 0;
-
-                @include m.escritorio{
-                    margin: 0 auto;
-                }
-
-                @include m.tablet{
-                    width: 25rem;
-                    height: 35rem;
-                }
-            }
-
-            
-            .botones{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                #reintentar{
-                    @include m.boton(v.$rojo);
-                    transform: scale(2);
-
-                    @include m.escritorio{
-                        transform: scale(1.4);
-                    }
-
-                    &:hover{
-                        transform: scale(2.01);
-
-                        @include m.escritorio{
-                            transform: scale(1.5);   
-                        }
-                    }
-                }
-            }
+        @include m.escritorio{
+            width: 100%;
+            order: 1;   
         }
     }
 }
