:+1: Add Frase pagina 20

--- a/src/scss/layouts/_pag20.scss
+++ b/src/scss/layouts/_pag20.scss
@@ -555,3 +555,12 @@
         }
     }
 }
+
+.mensaje20{
+    padding: 2rem;
+    color: white;
+    background: v.$colorFuente;
+    text-align: center;
+    margin-top: 2rem;
+    border-radius: 1rem;
+}
